--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/stile.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="column">
+                    <div class="card">
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
