--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/stile.css">
     <title>Document</title>
 </head>
@@ -14,9 +15,82 @@
             <div class="row">
                 <div class="column">
                     <div class="card">
+                        <img src="img/1.webp" alt="first model">
+                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <div class="discount color-white">50%</div>
+                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Levi's</div>
+                        <b>RELAX FIT TEE UNISEX</b>
+                        <span class="new-price">14,99€ </span>
+                        <span class="old-price">29.99€</span>
                     </div>
-                </div>
-                
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/2.webp" alt="first model">
+                        <img class="img2" src="img/2b.webp" alt="first model second photo">
+                        <div class="discount color-white">30%</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Guess</div>
+                        <b>ROSES TEE</b>
+                        <span class="new-price">20,99€ </span>
+                        <span class="old-price">29.99€</span>
+                    </div>
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/1.webp" alt="first model">
+                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <div class="discount color-white">50%</div>
+                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Levi's</div>
+                        <b>RELAX FIT TEE UNISEX</b>
+                        <span class="new-price">14,99€ </span>
+                        <span class="old-price">29.99€</span>
+                    </div>
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/1.webp" alt="first model">
+                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <div class="discount color-white">50%</div>
+                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Levi's</div>
+                        <b>RELAX FIT TEE UNISEX</b>
+                        <span class="new-price">14,99€ </span>
+                        <span class="old-price">29.99€</span>
+                    </div>
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/1.webp" alt="first model">
+                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <div class="discount color-white">50%</div>
+                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Levi's</div>
+                        <b>RELAX FIT TEE UNISEX</b>
+                        <span class="new-price">14,99€ </span>
+                        <span class="old-price">29.99€</span>
+                    </div>
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/1.webp" alt="first model">
+                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <div class="discount color-white">50%</div>
+                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Levi's</div>
+                        <b>RELAX FIT TEE UNISEX</b>
+                        <span class="new-price">14,99€ </span>
+                        <span class="old-price">29.99€</span>
+                    </div>
+                </div>    
+
             </div>
         </div>
     </main>
