--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        
+    </header>
     <main>
         <div class="container">
             <div class="row">
@@ -40,8 +42,20 @@
                 </div>    
                 <div class="column">
                     <div class="card">
-                        <img src="img/1.webp" alt="first model">
-                        <img class="img2" src="img/1b.webp" alt="first model second photo">
+                        <img src="img/3.webp" alt="first model">
+                        <img class="img2" src="img/3b.webp" alt="first model second photo">
+                        <div class="discount color-white">30%</div>
+                        <i class="fa-solid fa-heart heart"></i>
+                        <div>Come Zucchero Filato</div>
+                        <b>VOGLIA DI COLORI PASTELLO</b>
+                        <span class="new-price">129,99€ </span>
+                        <span class="old-price">184.99€</span>
+                    </div>
+                </div>    
+                <div class="column">
+                    <div class="card">
+                        <img src="img/4.webp" alt="first model">
+                        <img class="img2" src="img/4b.webp" alt="first model second photo">
                         <div class="discount color-white">50%</div>
                         <div class="sostenibility color-white">Sostenibilità</div>
                         <i class="fa-solid fa-heart heart"></i>
@@ -53,41 +67,23 @@
                 </div>    
                 <div class="column">
                     <div class="card">
-                        <img src="img/1.webp" alt="first model">
-                        <img class="img2" src="img/1b.webp" alt="first model second photo">
-                        <div class="discount color-white">50%</div>
-                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <img src="img/5.webp" alt="first model">
+                        <img class="img2" src="img/5b.webp" alt="first model second photo">
                         <i class="fa-solid fa-heart heart"></i>
-                        <div>Levi's</div>
-                        <b>RELAX FIT TEE UNISEX</b>
-                        <span class="new-price">14,99€ </span>
-                        <span class="old-price">29.99€</span>
+                        <div>Maya Deluxe</div>
+                        <b>STRIPE BODICE</b>
+                        <span class="new-price">99,99€ </span>
                     </div>
                 </div>    
                 <div class="column">
                     <div class="card">
-                        <img src="img/1.webp" alt="first model">
-                        <img class="img2" src="img/1b.webp" alt="first model second photo">
-                        <div class="discount color-white">50%</div>
-                        <div class="sostenibility color-white">Sostenibilità</div>
+                        <img src="img/6.webp" alt="first model">
+                        <img class="img2" src="img/6b.webp" alt="first model second photo">
+                        <div class="sostenibility-n2 color-white">Sostenibilità</div>
                         <i class="fa-solid fa-heart heart"></i>
                         <div>Levi's</div>
-                        <b>RELAX FIT TEE UNISEX</b>
-                        <span class="new-price">14,99€ </span>
-                        <span class="old-price">29.99€</span>
-                    </div>
-                </div>    
-                <div class="column">
-                    <div class="card">
-                        <img src="img/1.webp" alt="first model">
-                        <img class="img2" src="img/1b.webp" alt="first model second photo">
-                        <div class="discount color-white">50%</div>
-                        <div class="sostenibility color-white">Sostenibilità</div>
-                        <i class="fa-solid fa-heart heart"></i>
-                        <div>Levi's</div>
-                        <b>RELAX FIT TEE UNISEX</b>
-                        <span class="new-price">14,99€ </span>
-                        <span class="old-price">29.99€</span>
+                        <b>TEE UNISEX</b>
+                        <span class="new-price">29,99€ </span>
                     </div>
                 </div>    
 
