--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
     <header>
-        
+        <div class="nav-container navbar">
+            <div class="navbar-menu"> <strong> Donna Uomo Bambini</strong></div>
+            <div class="navbar-logo"><img id="logo" src="img/boolean-logo.png" alt="logo boolean"></div>
+            <div class="navbar-actions">
+                <i class="fa-solid fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+        </div>
     </header>
     <main>
         <div class="container">
