--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <div class="nav-container navbar">
-            <div class="navbar-menu"> <strong> Donna Uomo Bambini</strong></div>
+        <div class="nav-footer-container navbar">
+            <div> <strong> Donna Uomo Bambini</strong></div>
             <div class="navbar-logo"><img id="logo" src="img/boolean-logo.png" alt="logo boolean"></div>
-            <div class="navbar-actions">
+            <div class="navbar-footer-actions">
                 <i class="fa-solid fa-user"></i>
                 <i class="fa-regular fa-heart"></i>
                 <i class="fa-solid fa-bag-shopping"></i>
@@ -98,6 +98,26 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="nav-footer-container navbar bgc-black color-white">
+            <div>
+                <ul>
+                    <li><strong>Boolando S.R.L</strong></li>
+                    <li>Informazioni legali Informativa sulla privacy Diritto di accesso</li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>Trovaci anche su</li>
+                    <li><i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-pinterest-p"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
